# Lumen

./: Cargo.toml  README.md
.cargo/: config.toml
compositor/: Cargo.toml
compositor/shaders/: blur.wgsl  glow.wgsl  liquid.wgsl  liquid_mask.wgsl  refraction.wgsl  shadow.wgsl
compositor/src/: capture.rs  compositor.rs  gpu.rs  lib.rs  utils.rs
compositor/src/motion/: driver.rs  island.rs  mod.rs  spring.rs  value.rs
compositor/src/pipelines/: blur.rs  glow.rs  mod.rs  refraction.rs  shadow.rs
core/: Cargo.toml
core/src/: bus.rs  core.rs  engine.rs  events.rs  lib.rs  runtime.rs  state.rs
core/src/audio/: loopback.rs  mic.rs  mod.rs  smoothing.rs
core/src/media/: art.rs  manager.rs  mod.rs  state.rs  watcher.rs
core/src/services/: audio.rs  camera.rs  media.rs  microphone.rs  mod.rs  notifications.rs
core/src/sources/: camera.rs  media.rs  mod.rs
core/src/utils/: artwork.rs  icon.rs  mod.rs  name.rs  simd_audio.rs
ui/: Cargo.toml  build.rs
ui/src/: app.rs  config.rs  controller.rs  geometry.rs  main.rs  mode.rs  state.rs  sync.rs
ui/src/config/: island.rs  mod.rs  notification.rs
ui/src/platform/: clickthrough.rs  cursor.rs  fullscreen.rs  mod.rs  toast.rs  tray.rs  updater.rs  window.rs
ui/src/utils/: mod.rs
ui/ui/: IndicatorLayer.slint  Island.slint  Shell.slint  base.slint  global.slint  lumen.slint  types.slint
ui/ui/components/: ElidedText.slint  Indicator.slint  MediaControls.slint  SpectrumBars.slint  Timeline.slint  index.slint
ui/ui/layouts/: Idle.slint  Media.slint  Notification.slint  index.slint
ui/ui/theme/: Colors.slint  Metrics.slint
ui/ui/views/: CameraView.slint  IdleView.slint  MediaView.slint  MicView.slint  ViewStack.slint
