[package]
name = "lumen-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "full"] }
windows = { version = "0.62.2", features = [
    "Foundation",
    "ApplicationModel",
    "Storage",
    "Storage_Streams",
    "Media",
    "Media_Control",
    "Media_Playback",
    "Win32_Media",
    "Win32_Media_Audio",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com_StructuredStorage", 
    "Win32_System_Variant"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1.0.100"
windows-core = "0.62.2"
