[package]
name = "lumen-core"
description = "Core library for Lumen"
authors = ["Risuleia"]
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
windows = { version = "0.62.2", features = [
    "ApplicationModel",
    "Foundation",
    "Media_Control",
    "Storage_Streams",
    "UI_Notifications",
    "UI_Notifications_Management",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_Storage_EnhancedStorage",
    "Win32_System_Com_StructuredStorage", 
    "Win32_System_Variant",
    "Win32_UI_Shell_PropertiesSystem",
] }
anyhow = "1.0.100"
windows-core = "0.62.2"
crossbeam-channel = { version = "0.5.15", features = ["std"] }
rustfft = { version = "6.4.1", default-features = false }
async-trait = "0.1.89"
winreg = { version = "0.56.0", default-features = false }
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }
dirs = "6.0.0"
xxhash-rust = { version = "0.8.15", default-features = false, features = ["xxh3"] }